manifests/frontend/canary-rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: oauth-frontend
  labels:
    app: oauth-frontend
spec:
  replicas: 3
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: oauth-frontend
  strategy:
    canary:
      steps:
      - setWeight: 20
      - pause: {duration: 20s}
      - analysis:
          templates:
          - templateName: canary-production-readiness
      - setWeight: 50
      - pause: {duration: 20s}
      - setWeight: 80
      - pause: {duration: 20s}
  template:
    metadata:
      labels:
        app: oauth-frontend
    spec:
      containers:
      - name: frontend
        image: oauth-frontend:v1
        imagePullPolicy: Never
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "75m"
            memory: "96Mi"
          limits:
            cpu: "100m"
            memory: "128Mi"
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
